tests/errors/const_no_init.lq
# A const without an initializer is a compile error.
const w
